--- a/handheld/pandora_1ghz_mark2_build_kernel.htm
+++ b/handheld/pandora_1ghz_mark2_build_kernel.htm
@@ -8,8 +8,7 @@
 
 -->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
   <title>司徒的教學網站</title>
@@ -21,52 +20,47 @@
   <meta name="robots" content="index, follow, noarchive" />
   <meta name="googlebot" content="noarchive" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, minimum-scale=0.1, maximum-scale=100.0"/>
-
-  <link rel="shortcut icon" href="../../../../website.ico">
-  <link rel="stylesheet" type="text/css" href="../../../../styles/shCore.css" />
-  <link rel="stylesheet" type="text/css" href="../../../../styles/shThemeDefault.css" />
-  <link rel="stylesheet" type="text/css" href="../../../../css/html.css" media="screen, projection, tv " />
-  <link rel="stylesheet" type="text/css" href="../../../../css/layout.css" media="screen, projection, tv" />
-  <link rel="stylesheet" type="text/css" href="../../../../css/print.css" media="print" />
-  
+  <link rel="shortcut icon" href="../website.ico">
+  <link rel="stylesheet" type="text/css" href="../styles/shCore.css" />
+  <link rel="stylesheet" type="text/css" href="../styles/shThemeDefault.css" />
+  <link rel="stylesheet" type="text/css" href="../css/html.css" media="screen" />
+  <link rel="stylesheet" type="text/css" href="../css/layout.css" media="screen" />
   <script type="text/javascript" src="../../../../scripts/shCore.js"></script>
   <script type="text/javascript" src="../../../../scripts/shBrushCpp.js"></script>
-
-  <!-- Conditional comment to apply opacity fix for IE #content background.
-       Invalid CSS, but can be removed without harming design -->
-  <!--[if gt IE 5]>
-  <link rel="stylesheet" type="text/css" href="css/ie.css" media="screen, projection, tv " />
-  <![endif]-->
 </head>
 
 <body>
 <script type="text/javascript">SyntaxHighlighter.all();</script>
 <div id="wrapper">
 <div id="content">
-<script type="text/javascript" src="../../../../header.js"></script>
+<script type="text/javascript" src="../header.js"></script>
 <div id="page">
-<h3>Pandora 1GHz &gt;&gt; Debian Mark2</h3>
-<p><b>build pnd library</b></p>
+<h3><a href="../index.htm">掌機</a> - Pandora (1GHz) - Debian (Mark2) - <b>Build Kernel</b></h3>
 <hr size="1">
+<br>
 <p>
-編譯歩驟如下：
+步驟如下：
 </p>
 <pre>
-$ git clone git://git.openpandora.org/pandora-libraries.git
-$ cd pandora-libraries
-$ make
-$ make deploy
-$ deployment/usr/bin/pnd_info /media/mmcblk1p1/pandora/menu/pcsx_rearmed_r22.pnd 
-</pre>
+$ cd
+$ git clone git://git.openpandora.org/pandora-kernel.git
+$ cd pandora-kernel
+$ make omap3_pandora_defconfig
+$ make uImage modules
+$ sudo INSTALL_MOD_PATH="/lib/modules/" make modules_install
+$ sudo cp arch/arm/boot/uImage /boot/uImage-3.2.78-hf
+$ sudo vim /boot/autoboot.txt
+    setenv bootargs root=/dev/mmcblk0p2 rw rootwait console=ttyS0,115200n8 vram=6272K omapfb.vram=0:3000K mmc_core.removable=0 video=/dev/fb0
+    fatload mmc 0 ${loadaddr} uImage-3.2.78-hf
+    bootm ${loadaddr}
+$ sudo reboot
+</pre><br>
 
 <p>
-<img src="build_pnd/1.jpg" class="maxSize">
+完成<br>
+<img src="pandora_1ghz_mark2_build_kernel/1.jpg" class="maxSize">
 </p>
-
-<p>
-<br><a href="../../../../handheld.htm">返回上一頁</a>
-</p>
-
+<br>
 </div>
 </div>
 </div>
