--- a/handheld/pandora_1ghz_mark2_build_kicad.htm
+++ b/handheld/pandora_1ghz_mark2_build_kicad.htm
@@ -35,73 +35,49 @@
 <div id="content">
 <script type="text/javascript" src="../header.js"></script>
 <div id="page">
-<h3><a href="../index.htm">掌機</a> - Pandora (1GHz) - SuperZaxxon - <b>中文輸入法</b></h3>
+<h3><a href="../index.htm">掌機</a> - Pandora (1GHz) - Debian (Mark2) - <b>Build KiCad</b></h3>
 <hr size="1">
 <br>
 <p>
-更新套件
+為何司徒會想編譯KiCad呢？因為Debian 8(Jessie)安裝的KiCad是<b>0.20140622+bzr4027-3</b>，這個版本的KiCad尚未支援新的Footprint格式(<b>.kicad_mod</b>)，而司徒需要的Footprint，如：QFN16，在官方GitHub上的則是<b>.kicad_mod</b>格式，因此，為了節省開發時間並可以使用更多官方的Footprint Library，司徒只好手動編譯KiCad<br><br>
+
+在編譯KiCad之前，請先手動編譯OpenSSL，然後還需要掛載一個SWAP空間(建議4GB)，如果使用者本身己經有SWAP Partition並且是2GB以上的空間，就不需新增掛載SWAP空間，否則在編譯KiCad時，會遇到<b>virtua memory exhausted: cannot allocate memory</b>的錯誤訊息<br><br>
+
+手動掛載SWAP檔案(4GB)：
 </p>
 <pre>
-$ sudo opkg update
-$ sudo opkg install gtk-immodule-xim
-$ sudo opkg install angstrom-locale-zh-feed-config
-$ sudo opkg install locale-base-zh-tw
+$ sudo dd if=/dev/zero of=swapfile bs=1M count=4000
+$ sudo mkswap swapfile
+$ sudo swapon swapfile
+$ sudo cat /proc/meminfo
+    SwapTotal:       3926012 kB
+    SwapFree:        3885592 kB
 </pre><br>
 
 <p>
-設定中文語系
+編譯：
 </p>
 <pre>
-$ sudo vim ~/.profile
-    export LANG=zh_TW.UTF-8
-    export LC_ALL=zh_TW.UTF-8
-    export XMODIFIERS=@im=uim
-    export GTK_IM_MODULE=uim
-    uim-xim &amp;
-    uim-toolbar-gtk &amp;
-</pre><br>
+$ sudo apt-get install libssl-dev libboost1.55-all-dev libboost-context1.55-dev libboost-thread1.55-dev libboost-system1.55-dev
 
-<p>
-支援中文檔名
-</p>
-<pre>
-$ sudo nano /etc/udev/scripts/mount.sh
-    if ! $MOUNT -t auto -o dirsync,noatime,umask=0,utf8 $DEVNAME "/media/$name" &amp;&amp; ! $MOUNT -t auto -o dirsync,noatime,utf8 $DEVNAME "/media/$name"
-</pre><br>
-
-<p>
-設定vfat mount格式為utf8
-</p>
-<pre>
-$ sudo nano /etc/xdg/xfce4/mount.rc
-    [vfat]
-    uid=<auto>
-    utf8=true
-    shotname=winnt
-</pre><br>
-
-<p>
-安裝套件
-</p>
-<pre>
 $ cd
-$ wget https://github.com/steward-fu/website/releases/download/pandora/pinyin.tar.gz
-$ cd /
-$ sudo tar xvfp ~/pinyin.tar.gz
+$ wget http://pkgs.fedoraproject.org/repo/pkgs/kicad/kicad-4.0.1.tar.xz/e85e9ab6ba7736377a31cfecc8aca4a6/kicad-4.0.1.tar.xz
+$ tar xvf kicad-4.0.1.tar.xz
+$ cd kicad-4.0.1
+$ mkdir build
+$ cd build
+$ cmake -DCMAKE_BUILD_TYPE=Release -DKICAD_SCRIPTING=ON -DKICAD_SCRIPTING_MODULES=ON -DKICAD_SCRIPTING_WXPYTHON=ON ..
+$ make
+$ sudo make install
 </pre><br>
 
 <p>
-重新開機
+如果使用者不想手動編譯KiCad，也可以透過jessie-backports安裝KiCad(4.0.2+dfsg1-2~bpo8+1-1)，這個版本的KiCad就有支援新的<b>.kicad_mod</b>元件格式
 </p>
 <pre>
-$ sudo reboot
-</pre><br>
-
-<p>
-完成<br>
-<img src="pandora_1ghz_superzaxxon_cht/1.jpg" class="maxSize"><br>
-P.S. 點擊右下角視窗切換輸入法，<b>Shift + Space</b>則是On、Off的切換
-</p>
+$ sudo apt-get update
+$ sudo apt-get install kicad-common=4.0.2+dfsg1-2~bpo8+1-1 kicad=4.0.2+dfsg1-2~bpo8+1-1
+</pre>
 <br>
 </div>
 </div>
