--- a/handheld/pandora_1ghz_mark2_fix_scim_pinyin_font.htm
+++ b/handheld/pandora_1ghz_mark2_fix_scim_pinyin_font.htm
@@ -35,72 +35,23 @@
 <div id="content">
 <script type="text/javascript" src="../header.js"></script>
 <div id="page">
-<h3><a href="../index.htm">掌機</a> - Pandora (1GHz) - SuperZaxxon - <b>中文輸入法</b></h3>
+<h3><a href="../index.htm">掌機</a> - Pandora (1GHz) - Debian (Mark2) - <b>解決無法更改SCIM Pinyin字型問題</b></h3>
 <hr size="1">
 <br>
 <p>
-更新套件
-</p>
-<pre>
-$ sudo opkg update
-$ sudo opkg install gtk-immodule-xim
-$ sudo opkg install angstrom-locale-zh-feed-config
-$ sudo opkg install locale-base-zh-tw
-</pre><br>
-
-<p>
-設定中文語系
-</p>
-<pre>
-$ sudo vim ~/.profile
-    export LANG=zh_TW.UTF-8
-    export LC_ALL=zh_TW.UTF-8
-    export XMODIFIERS=@im=uim
-    export GTK_IM_MODULE=uim
-    uim-xim &amp;
-    uim-toolbar-gtk &amp;
-</pre><br>
-
-<p>
-支援中文檔名
-</p>
-<pre>
-$ sudo nano /etc/udev/scripts/mount.sh
-    if ! $MOUNT -t auto -o dirsync,noatime,umask=0,utf8 $DEVNAME "/media/$name" &amp;&amp; ! $MOUNT -t auto -o dirsync,noatime,utf8 $DEVNAME "/media/$name"
-</pre><br>
-
-<p>
-設定vfat mount格式為utf8
-</p>
-<pre>
-$ sudo nano /etc/xdg/xfce4/mount.rc
-    [vfat]
-    uid=<auto>
-    utf8=true
-    shotname=winnt
-</pre><br>
-
-<p>
-安裝套件
+司徒常常遇到無法修改字型問題，經過測試後，發現如下方式可以修複(xxx是使用者名字)：
 </p>
 <pre>
 $ cd
-$ wget https://github.com/steward-fu/website/releases/download/pandora/pinyin.tar.gz
-$ cd /
-$ sudo tar xvfp ~/pinyin.tar.gz
-</pre><br>
-
-<p>
-重新開機
-</p>
-<pre>
-$ sudo reboot
+$ sudo chown xxx:xxx -R .scim
+$ chmod 0777 -R .scim
+$ nano .scim/config
+    /Panel/Gtk/Font = Droid Sans 14
 </pre><br>
 
 <p>
 完成<br>
-<img src="pandora_1ghz_superzaxxon_cht/1.jpg" class="maxSize"><br>
-P.S. 點擊右下角視窗切換輸入法，<b>Shift + Space</b>則是On、Off的切換
+<img src="pandora_1ghz_mark2_fix_scim_pinyin_font/1.jpg" class="maxSize">
 </p>
 <br>
 </div>
