--- a/index.htm
+++ b/index.htm
@@ -436,70 +436,57 @@ UART傳輸線</a><br>
     <a href="handheld/pandora_1ghz_mark2_sbox.htm">
     架設ScratchBox環境</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/1ghz/mark2/jet200.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_1ghz_mark2_jet200.htm">
     連接Pentax PocketJet200熱感印表機</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/1ghz/mark2/fix_usbhost.htm">
-    解決USBHostTrigger的問題</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_1ghz_mark2_fix_usbhost.htm">
+    解決USBHostTrigger問題</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/1ghz/mark2/fix_scim-pinyin-start.htm">
-    解決無法啟動scim-pinyin的問題</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_1ghz_mark2_fix_scim_pinyin_start.htm">
+    解決無法啟動SCIM Pinyin問題</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/1ghz/mark2/fix_scim-pinyin-font.htm">
-    解決無法更改scim-pinyin字型的問題</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_1ghz_mark2_fix_scim_pinyin_font.htm">
+    解決無法更改SCIM Pinyin字型問題</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/1ghz/mark2/fix_qtcreator.htm">
-    解決qtcreator的"initialize OpenGL"問題</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_1ghz_mark2_fix_qtcreator.htm">
+    解決QT Creator Initialize OpenGL問題</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="handheld/pandora_1ghz_mark2_mount_pnd.htm">
     如何掛載PND檔案</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/1ghz/mark2/pidgin_line.htm">
-    如何在Pidgin上使用LINE聊天軟體</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_1ghz_mark2_build_kicad.htm">
+    Build KiCad</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/1ghz/mark2/pidgin_skype.htm">
-    如何在Pidgin上使用Skype聊天軟體</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_1ghz_mark2_build_kernel.htm">
+    Build Kernel</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/1ghz/mark2/build_pnd.htm">
-    build pnd library</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_1ghz_mark2_build_openssl.htm">
+    Build OpenSSL</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/1ghz/mark2/build_kicad-4.0.1.htm">
-    build kicad 4.0.1</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/1ghz/mark2/build_kernel-3.2.78.htm">
-    build kernel 3.2.78</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/1ghz/mark2/build_openssl-1.0.2g.htm">
-    build openssl 1.0.2g</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/1ghz/mark2/build_mipsel-2016.02.htm">
-    build mipsel toolchain(buildroot 201602)</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_1ghz_mark2_build_pnd.htm">
+    Build PND Library</a><br>
 
 &oplus;
-<b>Debian Mark3</b><br>
+<b>Debian (Mark3)</b><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/1ghz/mark3/setup.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_1ghz_mark3_setup.htm">
     安裝系統</a><br>
-
 <br><br><br><br>
 
 <div id="pandora2"></div>
 <h3><img src="img/photos/pandora.jpg" class="floatLeft"/>
-Pandora Rebirth</h3>
+Pandora (Rebirth)</h3>
 <hr size="1"><br><br><br><br><br>
 
 &lowast;
@@ -808,24 +795,24 @@ UART改造</a><br>
 
 <div id="pandora3"></div>
 <h3><img src="img/photos/pandora.jpg" class="floatLeft"/>
-Pandora Classic</h3>
+Pandora (Classic)</h3>
 <hr size="1"><br><br><br><br><br>
 
-&lowast;
-<a href="handheld/pandora/classic/review.htm">
-介紹</a><br>
+&dash;
+<a href="handheld/pandora_classic_spec.htm">
+簡要規格</a><br>
 
-&lowast;
-<a href="handheld/pandora/classic/teardown.htm">
+&dash;
+<a href="handheld/pandora_classic_teardown.htm">
 拆機</a><br>
 
-&lowast;
-<a href="handheld/pandora/classic/screen.htm">
+&dash;
+<a href="handheld/pandora_classic_screen.htm">
 更換螢幕</a><br>
 
-&lowast;
-<a href="handheld/pandora/classic/battery.htm">
-電池(Out of temperature)</a>
+&dash;
+<a href="handheld/pandora_classic_fix_battery.htm">
+解決電池(Out of Temperature)問題</a>
 <br><br><br><br>
 
 <div id="gaviar"></div>
