--- a/handheld/pandora_rebirth_mark3_menu_root.htm
+++ b/handheld/pandora_rebirth_mark3_menu_root.htm
@@ -35,23 +35,15 @@
 <div id="content">
 <script type="text/javascript" src="../header.js"></script>
 <div id="page">
-<h3><a href="../index.htm">掌機</a> - Pandora (1GHz) - <b>簡要規格</b></h3>
+<h3><a href="../index.htm">掌機</a> - Pandora (Rebirth) - Debian (Mark3) - <b>如何從Menu執行Root程式</b></h3>
 <hr size="1">
 <br>
-<table>
-    <tr><th>CHIP</th><td>TI DM3730</td></tr>
-    <tr><th>CPU</th><td>ARM Cortex-A8 1GHz</td></tr>
-    <tr><th>GPU</th><td>PowerVR SGX530</td></tr>
-    <tr><th>MEMORY</th><td>512MB RAM and 512MB Flash</td></tr>
-    <tr><th>DISPLAY</th><td>4.3" 800x480 (Resistive)</td></tr>
-    <tr><th>INPUT</th><td>GamePad, JoyStick and QWERTY</td></tr>
-    <tr><th>SLOT</th><td>SD (x2)</td></tr>
-    <tr><th>PORT</th><td>USB A, USB Mini B, 3.5mm Jack</td></tr>
-    <tr><th>WIRELESS</th><td>Wi-Fi and Bluetooth v2.0</td></tr>
-    <tr><th>BATTERY</th><td>4000mA</td></tr>
-    <tr><th>DIMENSION</th><td>140.29mm x 83.48mm x 29.25mm</td></tr>
-    <tr><th>WEIGHT</th><td>320g</td></tr>
-</table>
+<p>
+Menu Command：
+</p>
+<pre>
+gksudo -k -u root APP_COMMAND
+</pre>
 <br>
 </div>
 </div>
