--- a/handheld/pandora_rebirth_spec.htm
+++ b/handheld/pandora_rebirth_spec.htm
@@ -35,12 +35,15 @@
 <div id="content">
 <script type="text/javascript" src="../header.js"></script>
 <div id="page">
-<h3><a href="../index.htm">掌機</a> - Pandora (1GHz) - <b>簡要規格</b></h3>
+<h3><a href="../index.htm">掌機</a> - Pandora (Rebirth) - <b>簡要規格</b></h3>
 <hr size="1">
 <br>
+<p>
+簡要規格
+</p>
 <table>
-    <tr><th>CHIP</th><td>TI DM3730</td></tr>
-    <tr><th>CPU</th><td>ARM Cortex-A8 1GHz</td></tr>
+    <tr><th>CHIP</th><td>TI OMAP3530</td></tr>
+    <tr><th>CPU</th><td>ARM Cortex-A8 600MHz</td></tr>
     <tr><th>GPU</th><td>PowerVR SGX530</td></tr>
     <tr><th>MEMORY</th><td>512MB RAM and 512MB Flash</td></tr>
     <tr><th>DISPLAY</th><td>4.3" 800x480 (Resistive)</td></tr>
