--- a/handheld/pandora_rebirth_uart.htm
+++ b/handheld/pandora_rebirth_uart.htm
@@ -35,23 +35,40 @@
 <div id="content">
 <script type="text/javascript" src="../header.js"></script>
 <div id="page">
-<h3><a href="../index.htm">掌機</a> - Pandora (1GHz) - <b>簡要規格</b></h3>
+<h3><a href="../index.htm">掌機</a> - Pandora (Rebirth) - <b>UART改造</b></h3>
 <hr size="1">
 <br>
-<table>
-    <tr><th>CHIP</th><td>TI DM3730</td></tr>
-    <tr><th>CPU</th><td>ARM Cortex-A8 1GHz</td></tr>
-    <tr><th>GPU</th><td>PowerVR SGX530</td></tr>
-    <tr><th>MEMORY</th><td>512MB RAM and 512MB Flash</td></tr>
-    <tr><th>DISPLAY</th><td>4.3" 800x480 (Resistive)</td></tr>
-    <tr><th>INPUT</th><td>GamePad, JoyStick and QWERTY</td></tr>
-    <tr><th>SLOT</th><td>SD (x2)</td></tr>
-    <tr><th>PORT</th><td>USB A, USB Mini B, 3.5mm Jack</td></tr>
-    <tr><th>WIRELESS</th><td>Wi-Fi and Bluetooth v2.0</td></tr>
-    <tr><th>BATTERY</th><td>4000mA</td></tr>
-    <tr><th>DIMENSION</th><td>140.29mm x 83.48mm x 29.25mm</td></tr>
-    <tr><th>WEIGHT</th><td>320g</td></tr>
-</table>
+<p>
+雖然司徒已經製作過UART傳輸線，但是，每次都要帶那條特殊的傳輸線，還是有些不方便，因此，司徒這次打算使用排針改造，位置如下：<br>
+<img src="pandora_rebirth_uart/1.jpg" class="maxSize"><br><br>
+
+系統使用的Port是UART3(/dev/ttyO2)，因此，司徒拉出RX3、TX3<br>
+<img src="pandora_rebirth_uart/2.jpg" class="maxSize"><br><br>
+
+外殼修改<br>
+<img src="pandora_rebirth_uart/3.jpg" class="maxSize"><br><br>
+
+完成<br>
+<img src="pandora_rebirth_uart/4.jpg" class="maxSize"><br><br>
+
+司徒後來覺得直接使用USB C改造，應該會是最漂亮以及方便使用的改造<br>
+<img src="pandora_rebirth_uart/5.jpg" class="maxSize"><br><br>
+
+拆除連接器<br>
+<img src="pandora_rebirth_uart/6.jpg" class="maxSize"><br><br>
+
+使用的腳位<br>
+<img src="pandora_rebirth_uart/7.jpg" class="maxSize"><br><br>
+
+電路圖<br>
+<img src="pandora_rebirth_uart/9.jpg" class="maxSize"><br><br>
+
+跳線<br>
+<img src="pandora_rebirth_uart/8.jpg" class="maxSize"><br><br>
+
+USB C除了可以當作COM Port使用之外，也可以幫Pandora充電，算是相當棒的改造<br>
+<img src="pandora_rebirth_uart/10.jpg" class="maxSize">
+</p>
 <br>
 </div>
 </div>
