--- a/index.htm
+++ b/index.htm
@@ -489,68 +489,67 @@ UART傳輸線</a><br>
 Pandora (Rebirth)</h3>
 <hr size="1"><br><br><br><br><br>
 
-&lowast;
-<a href="handheld/pandora/rebirth/review.htm">
-介紹</a><br>
+&dash;
+<a href="handheld/pandora_rebirth_spec.htm">
+簡要規格</a><br>
 
-&lowast;
-<a href="handheld/pandora/rebirth/teardown.htm">
+&dash;
+<a href="handheld/pandora_rebirth_teardown.htm">
 拆機</a><br>
 
-&lowast;
-<a href="handheld/pandora/rebirth/uart.htm">
+&dash;
+<a href="handheld/pandora_rebirth_uart.htm">
 UART改造</a><br>
 
-&lowast;
-<a href="handheld/pandora/rebirth/backlight.htm">
-支援鍵盤背光</a><br>
+&dash;
+<a href="handheld/pandora_rebirth_backlight.htm">
+鍵盤背光改造</a><br>
 
-&lowast;
-<a href="handheld/pandora/rebirth/motor.htm">
-支援振動馬達</a><br>
-
-&lowast;
-<a href="handheld/pandora/rebirth/fix_dsp.htm">
-解決"/dev/dsp"只有單聲道的問題</a><br>
+&dash;
+<a href="handheld/pandora_rebirth_motor.htm">
+振動馬達改造</a><br>
 
 &oplus;
-<b>Debian Mark3</b><br>
+<b>Debian (Mark3)</b><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/rebirth/mark3/dpi.htm">
-    修改DPI設定</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_rebirth_mark3_dpi.htm">
+    修改DPI</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/rebirth/mark3/keycode.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_rebirth_mark3_keycode.htm">
     Keycode</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/rebirth/mark3/fb_layer1.htm">
-    Framebuffer Layer1</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_rebirth_mark3_no_dsp.htm">
+    解決沒有/dev/dsp問題</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/rebirth/mark3/build_op_gammatable.htm">
-    build op_gammatable</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_rebirth_mark3_fix_dsp.htm">
+    解決/dev/dsp只有單聲道輸出問題</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/rebirth/mark3/build_kernel-sz174.htm">
-    build kernel 3.2.78</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_rebirth_mark3_serial.htm">
+    如何啟動/dev/ttyO2</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/rebirth/mark3/snd-oss.htm">
-    解決"no /dev/dsp"問題</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_rebirth_mark3_menu_root.htm">
+    如何從Menu執行Root程式</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/rebirth/mark3/serial.htm">
-    如何透過ttyO2登入</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_rebirth_mark3_miniusb_ssh.htm">
+    如何透過USB Mini B登入SSH</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/rebirth/mark3/menu_root.htm">
-    如何從Menu執行Root的程式</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_1ghz_mark2_build_kernel.htm">
+    Build Kernel</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/rebirth/mark3/miniusb_ssh.htm">
-    如何透過MiniUSB登入(SSH)</a><br>
+    &emsp;&emsp;&emsp;&emsp;&oplus;
+    <b>C/C++</b><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="handheld/pandora_rebirth_mark3_cpp_fb.htm">
+        Framebuffer</a><br>
 
 &oplus;
 <b>SuperZaxxon</b><br>
