--- a/handheld/pandora_rebirth_mark3_keycode.htm
+++ b/handheld/pandora_rebirth_mark3_keycode.htm
@@ -8,8 +8,7 @@
 
 -->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
   <title>司徒的教學網站</title>
@@ -21,36 +20,24 @@
   <meta name="robots" content="index, follow, noarchive" />
   <meta name="googlebot" content="noarchive" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, minimum-scale=0.1, maximum-scale=100.0"/>
-
-  <link rel="shortcut icon" href="../../../../website.ico">
-  <link rel="stylesheet" type="text/css" href="../../../../styles/shCore.css" />
-  <link rel="stylesheet" type="text/css" href="../../../../styles/shThemeDefault.css" />
-  <link rel="stylesheet" type="text/css" href="../../../../css/html.css" media="screen, projection, tv " />
-  <link rel="stylesheet" type="text/css" href="../../../../css/layout.css" media="screen, projection, tv" />
-  <link rel="stylesheet" type="text/css" href="../../../../css/print.css" media="print" />
-  
-  <script type="text/javascript" src="../../../../scripts/shCore.js"></script>
-  <script type="text/javascript" src="../../../../scripts/shBrushCpp.js"></script>
-
-  <!-- Conditional comment to apply opacity fix for IE #content background.
-       Invalid CSS, but can be removed without harming design -->
-  <!--[if gt IE 5]>
-  <link rel="stylesheet" type="text/css" href="css/ie.css" media="screen, projection, tv " />
-  <![endif]-->
+  <link rel="shortcut icon" href="../website.ico">
+  <link rel="stylesheet" type="text/css" href="../styles/shCore.css" />
+  <link rel="stylesheet" type="text/css" href="../styles/shThemeDefault.css" />
+  <link rel="stylesheet" type="text/css" href="../css/html.css" media="screen" />
+  <link rel="stylesheet" type="text/css" href="../css/layout.css" media="screen" />
+  <script type="text/javascript" src="../scripts/shCore.js"></script>
+  <script type="text/javascript" src="../scripts/shBrushCpp.js"></script>
 </head>
 
 <body>
 <script type="text/javascript">SyntaxHighlighter.all();</script>
 <div id="wrapper">
 <div id="content">
-<script type="text/javascript" src="../../../../header.js"></script>
+<script type="text/javascript" src="../header.js"></script>
 <div id="page">
-<h3>Pandora Rebirth &gt;&gt; Debian Mark3</h3>
-<p><b>Keycode</b></p>
+<h3><a href="../index.htm">掌機</a> - Pandora (Rebirth) - Debian (Mark3) - <b>Keycode</b></h3>
 <hr size="1">
-<p>
-如下：
-</p>
+<br>
 <table>
 <tr><th>Key</th><th>Code</th><th>Code(Fn)</th></tr>
 <tr><td>L1</td><td>62</td><td>62</td></tr>
@@ -107,12 +94,8 @@
 <tr><td>N</td><td>57</td><td>200</td></tr>
 <tr><td>M</td><td>58</td><td>201</td></tr>
 <tr><td>Space</td><td>65</td><td>23</td></tr>
-</table><br>
-
-<p>
-<br><a href="../../../../handheld.htm">返回上一頁</a>
-</p>
-
+</table>
+<br>
 </div>
 </div>
 </div>
