--- a/index.htm
+++ b/index.htm
@@ -554,201 +554,49 @@ UART改造</a><br>
 &oplus;
 <b>SuperZaxxon</b><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/rebirth/superzaxxon/setup_gcc.htm">
-    安裝開發環境</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/rebirth/superzaxxon/sdl_env.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_rebirth_superzaxxon_sdl_env.htm">
     SDL環境變數</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/rebirth/superzaxxon/trayicon.htm">
-    自製鍵盤背光控制</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/rebirth/superzaxxon/fbgrab.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_rebirth_superzaxxon_fbgrab.htm">
     如何擷取畫面</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/rebirth/superzaxxon/fix_ext4.htm">
-    如何使用ext4系統</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_rebirth_superzaxxon_boot_fromsd.htm">
+    如何從SD開機</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/rebirth/superzaxxon/boot_fromsd.htm">
-    如何從SDCard開機</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_rebirth_superzaxxon_usb_ssh.htm">
+    如何透過USB Mini B登入SSH</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/rebirth/superzaxxon/miniusb_ssh.htm">
-    如何透過MiniUSB登入(SSH)</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_rebirth_superzaxxon_bwidget.htm">
+    安裝BWidget</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/rebirth/superzaxxon/bwidget-1.9.14.htm">
-    安裝bwidget 1.9.14</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_rebirth_superzaxxon_sdlmixer.htm">
+    安裝SDL Mixer 1.2</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/rebirth/opkg_sdlmixer.htm">
-    安裝libsdl-mixer-1.2-dev</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_rebirth_superzaxxon_build_glib.htm">
+    build GLib</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/rebirth/superzaxxon/build_tmux.htm">
-    build tmux</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_rebirth_superzaxxon_build_sdl_omap.htm">
+    Build SDL OMAP</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/rebirth/superzaxxon/build_sdl_omap.htm">
-    build sdl_omap</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_rebirth_superzaxxon_build_libiconv.htm">
+    Build Libiconv</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/rebirth/superzaxxon/build_snes9x4p.htm">
-    build snes9x4p</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_rebirth_superzaxxon_build_pcsx_rearmed.htm">
+    Build PCSX ReARMed</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/rebirth/superzaxxon/build_tk-8.5.0.htm">
-    build tk 8.5.0</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/rebirth/superzaxxon/build_gmp-6.1.0.htm">
-    build gmp 6.1.0</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/rebirth/superzaxxon/build_mpc-1.1.0.htm">
-    build mpc 1.1.0</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/rebirth/superzaxxon/build_gcc-7.2.0.htm">
-    build gcc 7.2.0</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/rebirth/superzaxxon/build_tcl-8.5.0.htm">
-    build tcl 8.5.0</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/rebirth/superzaxxon/build_gpsp.htm">
-    build gpsp 0.91</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/rebirth/superzaxxon/build_mpfr-4.0.2.htm">
-    build mpfr 4.0.2</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/rebirth/superzaxxon/build_itcl-3.4.1.htm">
-    build itcl 3.4.1</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/rebirth/superzaxxon/build_tdom-0.9.0.htm">
-    build tdom 0.9.0</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/rebirth/superzaxxon/build_glib-2.2.0.htm">
-    build glib 2.2.0</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/rebirth/superzaxxon/build_astyle-2.06.htm">
-    build astyle 2.06</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/rebirth/superzaxxon/build_cscope-15.9.htm">
-    build cscope 15.9</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/rebirth/superzaxxon/build_smpeg-0.4.5.htm">
-    build smpeg 0.4.5</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/rebirth/superzaxxon/build_scons-3.1.2.htm">
-    build scons 3.1.2</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/rebirth/superzaxxon/build_p7zip-16.02.htm">
-    build p7zip 16.02</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/rebirth/superzaxxon/build_libao-1.2.0.htm">
-    build libao 1.2.0</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/rebirth/superzaxxon/build_tkimg-1.4.9.htm">
-    build tkimg 1.4.9</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/rebirth/superzaxxon/build_python-3.4.0.htm">
-    build python 3.4.0</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/rebirth/superzaxxon/build_slang2.htm">
-    build slang2 2.3.0</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/rebirth/superzaxxon/build_libnewt-0.52.htm">
-    build libnewt 0.52</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/rebirth/superzaxxon/build_autoconf-2.69.htm">
-    build autoconf 2.69</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/rebirth/superzaxxon/build_fceu.htm">
-    build gpfce 0.81-r2</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/rebirth/superzaxxon/build_libiconv.htm">
-    build libiconv 1.16</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/rebirth/superzaxxon/build_mercurial-5.3.htm">
-    build mercurial 5.3</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/rebirth/superzaxxon/build_automake-1.11.htm">
-    build automake 1.11</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/rebirth/superzaxxon/build_libtool-2.4.6.htm">
-    build libtool 2.4.6</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/rebirth/superzaxxon/build_elfutils.htm">
-    build elfutils 0.161</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/rebirth/superzaxxon/build_picodrive-1.93.htm">
-    build picodrive 1.93</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/rebirth/superzaxxon/build_picklelauncher.htm">
-    build picklelauncher</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/rebirth/superzaxxon/build_libunistring-0.9.htm">
-    build libunistring 0.9</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/rebirth/superzaxxon/build_pcsx_rearmed-r22.htm">
-    build pcsx_rearmed r22</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="emu/gba/gpsp_cht.htm">
-    移植gpsp(支援中文路徑)</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/rebirth/superzaxxon/port_fceu.htm">
-    移植fceu(支援中文路徑)</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="emu/smd/pico_cht.htm">
-    移植picodrive(支援中文路徑)</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/rebirth/port_pcsx.htm">
-    移植pcsx rearmed(支援振動功能)</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="emu/ps1/pcsx_cht.htm">
-    移植pcsx rearmed(支援中文路徑)</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/rebirth/superzaxxon/port_picklelauncher.htm">
-    移植picklelauncher(支援中文路徑)</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_rebirth_superzaxxon_fix_ext4.htm">
+    解決ext4系統無法使用的問題</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="handheld/pandora/rebirth/superzaxxon/fix_dtplite.htm">
@@ -790,6 +638,19 @@ UART改造</a><br>
     <a href="handheld/pandora/rebirth/superzaxxon/fix_hal.htm">
     解決"config/hal: couldn't initialise context: unknown error null"問題</a><br>
 
+    &emsp;&emsp;&emsp;&emsp;&oplus;
+    <b>Python</b><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="handheld/pandora_rebirth_superzaxxon_py_trayicon.htm">
+        鍵盤背光控制</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&oplus;
+    <b>C/C++</b><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="handheld/pandora_rebirth_superzaxxon_cpp_setup.htm">
+        開發環境</a><br>
 <br><br><br><br>
 
 <div id="pandora3"></div>
