--- a/handheld/pandora_rebirth_superzaxxon_boot_fromsd.htm
+++ b/handheld/pandora_rebirth_superzaxxon_boot_fromsd.htm
@@ -8,8 +8,7 @@
 
 -->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
   <title>司徒的教學網站</title>
@@ -21,39 +20,30 @@
   <meta name="robots" content="index, follow, noarchive" />
   <meta name="googlebot" content="noarchive" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, minimum-scale=0.1, maximum-scale=100.0"/>
-
-  <link rel="shortcut icon" href="../../../../website.ico">
-  <link rel="stylesheet" type="text/css" href="../../../../styles/shCore.css" />
-  <link rel="stylesheet" type="text/css" href="../../../../styles/shThemeDefault.css" />
-  <link rel="stylesheet" type="text/css" href="../../../../css/html.css" media="screen, projection, tv " />
-  <link rel="stylesheet" type="text/css" href="../../../../css/layout.css" media="screen, projection, tv" />
-  <link rel="stylesheet" type="text/css" href="../../../../css/print.css" media="print" />
-  
-  <script type="text/javascript" src="../../../../scripts/shCore.js"></script>
-  <script type="text/javascript" src="../../../../scripts/shBrushCpp.js"></script>
-
-  <!-- Conditional comment to apply opacity fix for IE #content background.
-       Invalid CSS, but can be removed without harming design -->
-  <!--[if gt IE 5]>
-  <link rel="stylesheet" type="text/css" href="css/ie.css" media="screen, projection, tv " />
-  <![endif]-->
+  <link rel="shortcut icon" href="../website.ico">
+  <link rel="stylesheet" type="text/css" href="../styles/shCore.css" />
+  <link rel="stylesheet" type="text/css" href="../styles/shThemeDefault.css" />
+  <link rel="stylesheet" type="text/css" href="../css/html.css" media="screen" />
+  <link rel="stylesheet" type="text/css" href="../css/layout.css" media="screen" />
+  <script type="text/javascript" src="../scripts/shCore.js"></script>
+  <script type="text/javascript" src="../scripts/shBrushCpp.js"></script>
 </head>
 
 <body>
 <script type="text/javascript">SyntaxHighlighter.all();</script>
 <div id="wrapper">
 <div id="content">
-<script type="text/javascript" src="../../../../header.js"></script>
+<script type="text/javascript" src="../header.js"></script>
 <div id="page">
-<h3>Pandora Rebirth &gt;&gt; SuperZaxxon</h3>
-<p><b>如何從SDCard開機</b></p>
+<h3><a href="../index.htm">掌機</a> - Pandora (Rebirth) - SuperZaxxon - <b>如何從SD開機</b></h3>
 <hr size="1">
+<br>
 <p>
 參考資訊：<br>
-1. <a href="https://pandorawiki.org/Boot_setup#OR_copy_your_firmware_from_the_NAND_to_the_SD_card">boot from sdcard</a><br><br>
+https://pandorawiki.org/Boot_setup#OR_copy_your_firmware_from_the_NAND_to_the_SD_card<br><br>
 
 步驟如下：<br>
-1. 第一個磁區格式化成ext3<br>
+1. 第1磁區格式化成ext3<br>
 2. autoboot.txt
 </p>
 <pre>
@@ -63,13 +53,9 @@ bootm 0x80300000
 </pre>
 <p>
 3. 複製Pandora根目錄的所有檔案到ext3磁區<br>
-4. SDCard插入左邊卡槽並且開機即可
+4. SD插入左邊卡槽並且開機即可
 </p>
-
-<p>
-<br><a href="../../../../handheld.htm">返回上一頁</a>
-</p>
-
+<br>
 </div>
 </div>
 </div>
