--- a/handheld/pandora_rebirth_superzaxxon_cpp_setup.htm
+++ b/handheld/pandora_rebirth_superzaxxon_cpp_setup.htm
@@ -8,8 +8,7 @@
 
 -->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
   <title>司徒的教學網站</title>
@@ -21,36 +20,27 @@
   <meta name="robots" content="index, follow, noarchive" />
   <meta name="googlebot" content="noarchive" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, minimum-scale=0.1, maximum-scale=100.0"/>
-
-  <link rel="shortcut icon" href="../../../../website.ico">
-  <link rel="stylesheet" type="text/css" href="../../../../styles/shCore.css" />
-  <link rel="stylesheet" type="text/css" href="../../../../styles/shThemeDefault.css" />
-  <link rel="stylesheet" type="text/css" href="../../../../css/html.css" media="screen, projection, tv " />
-  <link rel="stylesheet" type="text/css" href="../../../../css/layout.css" media="screen, projection, tv" />
-  <link rel="stylesheet" type="text/css" href="../../../../css/print.css" media="print" />
-  
-  <script type="text/javascript" src="../../../../scripts/shCore.js"></script>
-  <script type="text/javascript" src="../../../../scripts/shBrushCpp.js"></script>
-
-  <!-- Conditional comment to apply opacity fix for IE #content background.
-       Invalid CSS, but can be removed without harming design -->
-  <!--[if gt IE 5]>
-  <link rel="stylesheet" type="text/css" href="css/ie.css" media="screen, projection, tv " />
-  <![endif]-->
+  <link rel="shortcut icon" href="../website.ico">
+  <link rel="stylesheet" type="text/css" href="../styles/shCore.css" />
+  <link rel="stylesheet" type="text/css" href="../styles/shThemeDefault.css" />
+  <link rel="stylesheet" type="text/css" href="../css/html.css" media="screen" />
+  <link rel="stylesheet" type="text/css" href="../css/layout.css" media="screen" />
+  <script type="text/javascript" src="../scripts/shCore.js"></script>
+  <script type="text/javascript" src="../scripts/shBrushCpp.js"></script>
 </head>
 
 <body>
 <script type="text/javascript">SyntaxHighlighter.all();</script>
 <div id="wrapper">
 <div id="content">
-<script type="text/javascript" src="../../../../header.js"></script>
+<script type="text/javascript" src="../header.js"></script>
 <div id="page">
-<h3>Pandora Rebirth &gt;&gt; SuperZaxxon</h3>
-<p><b>安裝開發環境</b></p>
+<h3><a href="../index.htm">掌機</a> - Pandora (Rebirth) - SuperZaxxon - C/C++ - <b>開發環境</b></h3>
 <hr size="1">
+<br>
 <p>
 參考資訊：<br>
-1. <a href="https://www.scribblygum.com.au/blog/post/setting-up-a-c-development-environment-on-the-pandora/">development-environment-on-the-pandora/</a><br><br>
+https://www.scribblygum.com.au/blog/post/setting-up-a-c-development-environment-on-the-pandora/<br><br>
 
 步驟如下：
 </p>
@@ -62,12 +52,8 @@ $ sudo opkg install libgles-omap3-es23-dev
 $ sudo opkg install libsdl-1.2-dev libsdl-gfx-dev libsdl-image-1.2-dev libsdl-net-1.2-dev libsdl-ttf-2.0-dev
 $ sudo opkg --nodeps install libsdl-mixer-1.2-dev
 $ sudo opkg install git
-</pre><br>
-
-<p>
-<br><a href="../../../../handheld.htm">返回上一頁</a>
-</p>
-
+</pre>
+<br>
 </div>
 </div>
 </div>
