--- a/handheld/pandora_rebirth_superzaxxon_fix_dtplite.htm
+++ b/handheld/pandora_rebirth_superzaxxon_fix_dtplite.htm
@@ -8,8 +8,7 @@
 
 -->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
   <title>司徒的教學網站</title>
@@ -21,35 +20,26 @@
   <meta name="robots" content="index, follow, noarchive" />
   <meta name="googlebot" content="noarchive" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, minimum-scale=0.1, maximum-scale=100.0"/>
-
-  <link rel="shortcut icon" href="../../../../website.ico">
-  <link rel="stylesheet" type="text/css" href="../../../../styles/shCore.css" />
-  <link rel="stylesheet" type="text/css" href="../../../../styles/shThemeDefault.css" />
-  <link rel="stylesheet" type="text/css" href="../../../../css/html.css" media="screen, projection, tv " />
-  <link rel="stylesheet" type="text/css" href="../../../../css/layout.css" media="screen, projection, tv" />
-  <link rel="stylesheet" type="text/css" href="../../../../css/print.css" media="print" />
-  
-  <script type="text/javascript" src="../../../../scripts/shCore.js"></script>
-  <script type="text/javascript" src="../../../../scripts/shBrushCpp.js"></script>
-
-  <!-- Conditional comment to apply opacity fix for IE #content background.
-       Invalid CSS, but can be removed without harming design -->
-  <!--[if gt IE 5]>
-  <link rel="stylesheet" type="text/css" href="css/ie.css" media="screen, projection, tv " />
-  <![endif]-->
+  <link rel="shortcut icon" href="../website.ico">
+  <link rel="stylesheet" type="text/css" href="../styles/shCore.css" />
+  <link rel="stylesheet" type="text/css" href="../styles/shThemeDefault.css" />
+  <link rel="stylesheet" type="text/css" href="../css/html.css" media="screen" />
+  <link rel="stylesheet" type="text/css" href="../css/layout.css" media="screen" />
+  <script type="text/javascript" src="../scripts/shCore.js"></script>
+  <script type="text/javascript" src="../scripts/shBrushCpp.js"></script>
 </head>
 
 <body>
 <script type="text/javascript">SyntaxHighlighter.all();</script>
 <div id="wrapper">
 <div id="content">
-<script type="text/javascript" src="../../../../header.js"></script>
+<script type="text/javascript" src="../header.js"></script>
 <div id="page">
-<h3>Pandora Rebirth &gt;&gt; SuperZaxxon</h3>
-<p><b>解決"dtplite: not found"問題</b></p>
+<h3><a href="../index.htm">掌機</a> - Pandora (Rebirth) - SuperZaxxon - <b>解決dtplite: not found問題</b></h3>
 <hr size="1">
+<br>
 <p>
-步驟如下：
+解法如下：
 </p>
 <pre>
 $ cd 
@@ -59,12 +49,8 @@ $ ./configure
 $ make
 $ sudo make install
 $ sudo cp -a modules/* /usr/lib/tcl8.5
-</pre><br>
-
-<p>
-<br><a href="../../../../handheld.htm">返回上一頁</a>
-</p>
-
+</pre>
+<br>
 </div>
 </div>
 </div>
