--- a/handheld/pandora_rebirth_superzaxxon_fix_libiconv.htm
+++ b/handheld/pandora_rebirth_superzaxxon_fix_libiconv.htm
@@ -35,15 +35,14 @@
 <div id="content">
 <script type="text/javascript" src="../header.js"></script>
 <div id="page">
-<h3><a href="../index.htm">掌機</a> - Pandora (Rebirth) - SuperZaxxon - <b>解決Ext4系統無法使用的問題</b></h3>
+<h3><a href="../index.htm">掌機</a> - Pandora (Rebirth) - SuperZaxxon - <b>解決GNU libiconv not in use ... iconv.h is from libiconv問題</b></h3>
 <hr size="1">
 <br>
 <p>
-SD如果是在PC上製作ext4系統時，Pandora並無法成功掛載，解法就是必須在SuperZaxxon下執行ext4格式化，如下所示：
+解法如下：
 </p>
 <pre>
-$ sudo fdisk /dev/mmcblk0
-$ sudo mkfs.ext4 -m 0 -L volumename /dev/mmcblk0p1
+$ ./configure --with-libiconv=gnu
 </pre>
 <br>
 </div>
