--- a/handheld/pandora_rebirth_superzaxxon_fix_getline.htm
+++ b/handheld/pandora_rebirth_superzaxxon_fix_getline.htm
@@ -35,15 +35,54 @@
 <div id="content">
 <script type="text/javascript" src="../header.js"></script>
 <div id="page">
-<h3><a href="../index.htm">掌機</a> - Pandora (Rebirth) - SuperZaxxon - <b>解決Ext4系統無法使用的問題</b></h3>
+<h3><a href="../index.htm">掌機</a> - Pandora (Rebirth) - SuperZaxxon - <b>解決Implicit declaration of function getline問題</b></h3>
 <hr size="1">
 <br>
 <p>
-SD如果是在PC上製作ext4系統時，Pandora並無法成功掛載，解法就是必須在SuperZaxxon下執行ext4格式化，如下所示：
+司徒在編譯Pandora的Perf工具時，tools/perf/util/probe-finder.c遇到<b>implicit declaration of function getline</b>問題，網路上找到的解法大致上是沒有定義_GNU_SOURCE和_POSIX_C_SOURCE 200809L的問題，不過Pandora的Library比較特別，即使定義__USE_GNU也是無效，最後只好重新抄寫一份，就可以成功編譯Perf工具了
 </p>
-<pre>
-$ sudo fdisk /dev/mmcblk0
-$ sudo mkfs.ext4 -m 0 -L volumename /dev/mmcblk0p1
+<pre class="brush:cpp">
+int getline(char **lineptr, size_t *n, FILE *stream);
+int getline(char **lineptr, size_t *n, FILE *stream)
+{
+    static char line[256];
+
+    char *ptr;
+    unsigned int len;
+
+    if (lineptr == NULL || n == NULL) {
+        errno = EINVAL;
+        return -1;
+    }
+
+    if (ferror(stream)) {
+        return -1;
+    }
+
+    if (feof(stream)) {
+        return -1;
+    }
+
+    ptr = fgets(line, 256, stream);
+    ptr = strchr(line, '\n');
+    if (ptr) {
+        *ptr = '\0';
+    }
+
+    len = strlen(line);
+
+    if ((len + 1) &lt; 256) {
+        ptr = realloc(*lineptr, 256);
+        if (ptr == NULL) {
+            return(-1);
+        }
+        *lineptr = ptr;
+        *n = 256;
+    }
+
+    strcpy(*lineptr, line);
+    return len;
+}
 </pre>
 <br>
 </div>
