--- a/handheld/pandora_rebirth_superzaxxon_fix_scp.htm
+++ b/handheld/pandora_rebirth_superzaxxon_fix_scp.htm
@@ -35,16 +35,13 @@
 <div id="content">
 <script type="text/javascript" src="../header.js"></script>
 <div id="page">
-<h3><a href="../index.htm">掌機</a> - Pandora (Rebirth) - SuperZaxxon - <b>解決Ext4系統無法使用的問題</b></h3>
+<h3><a href="../index.htm">掌機</a> - Pandora (Rebirth) - SuperZaxxon - <b>解決SCP Connection Refused問題</b></h3>
 <hr size="1">
 <br>
 <p>
-SD如果是在PC上製作ext4系統時，Pandora並無法成功掛載，解法就是必須在SuperZaxxon下執行ext4格式化，如下所示：
+Settings =&gt; Startup =&gt; Enable/Disable services on boot =&gt; Start Dropbear (SSH login) on bootup<br>
+<img src="pandora_rebirth_superzaxxon_fix_scp/1.jpg" class="maxSize">
 </p>
-<pre>
-$ sudo fdisk /dev/mmcblk0
-$ sudo mkfs.ext4 -m 0 -L volumename /dev/mmcblk0p1
-</pre>
 <br>
 </div>
 </div>
