Astro Slide 5G Refined.

--- a/index.htm
+++ b/index.htm
@@ -596,47 +596,39 @@ UART改造</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="handheld/pandora_rebirth_superzaxxon_fix_ext4.htm">
-    解決ext4系統無法使用的問題</a><br>
+    解決Ext4系統無法使用的問題</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/rebirth/superzaxxon/fix_dtplite.htm">
-    解決"dtplite: not found"問題</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_rebirth_superzaxxon_fix_dtplite.htm">
+    解決dtplite: not found問題</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/rebirth/superzaxxon/fix_scp.htm">
-    解決"scp connection refused"問題</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_rebirth_superzaxxon_fix_scp.htm">
+    解決SCP Connection Refused問題</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/rebirth/superzaxxon/fix_ltclstub8.5.htm">
-    解決"library not found for -ltclstub8.5"問題</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_rebirth_superzaxxon_fix_getline.htm">
+    解決Implicit declaration of function getline問題</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/rebirth/superzaxxon/fix_m4.htm">
-    解決"no acceptable m4 could be found in $PATH"問題</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_rebirth_superzaxxon_fix_gettext.htm">
+    解決Making all in po, No rule to make target azNONE問題</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/rebirth/superzaxxon/fix_getline.htm">
-    解決"implicit declaration of function getline"問題</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_rebirth_superzaxxon_fix_libstdcpp.htm">
+    解決Grep: /lib/libstdc++.la: No such file or directory問題</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/rebirth/superzaxxon/fix_gettext.htm">
-    解決"Making all in po, No rule to make target azNONE"問題</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/rebirth/superzaxxon/fix_libstdcpp.htm">
-    解決"grep: /lib/libstdc++.la: No such file or directory"問題</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/rebirth/superzaxxon/fix_libiconv.htm">
-    解決"GNU libiconv not in use ... iconv.h is from libiconv"問題</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_rebirth_superzaxxon_fix_libiconv.htm">
+    解決GNU libiconv not in use ... iconv.h is from libiconv問題</a><br>
     
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/rebirth/superzaxxon/fix_python_shared.htm">
-    解決"python.c: undefined reference to PyMem_RawFree Py_Main"問題</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_rebirth_superzaxxon_fix_python_shared.htm">
+    解決Python.c: undefined reference to PyMem_RawFree Py_Main問題</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/pandora/rebirth/superzaxxon/fix_hal.htm">
-    解決"config/hal: couldn't initialise context: unknown error null"問題</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_rebirth_superzaxxon_fix_hal.htm">
+    解決Config/hal: couldn't initialise context: unknown error null問題</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&oplus;
     <b>Python</b><br>
