--- a/phone.htm
+++ b/phone.htm
@@ -862,6 +862,14 @@ Astro Slide 5G</h3>
 <a href="phone/astro/review.htm">
 介紹</a><br>
 
+&dash;
+<a href="phone/astro_unlock.htm">
+Unlock Bootloader</a><br>
+
+&dash;
+<a href="phone/astro_fix_dm.htm">
+解決Your device will boot in 5 seconds問題</a><br>
+
 &oplus;
 <b>Android</b><br>
 
