Astro Slide 5G How to backup all partitions.

--- a/phone.htm
+++ b/phone.htm
@@ -867,6 +867,10 @@ Astro Slide 5G</h3>
 Unlock Bootloader</a><br>
 
 &dash;
+<a href="phone/astro_backup.htm">
+如何備份全部磁區的資料</a><br>
+
+&dash;
 <a href="phone/astro_fix_dm.htm">
 解決Your device will boot in 5 seconds問題</a><br>
 
