--- a/phone/astro_backup.htm
+++ b/phone/astro_backup.htm
@@ -35,31 +35,17 @@
 <div id="content">
 <script type="text/javascript" src="../header.js"></script>
 <div id="page">
-<h3><a href="../phone.htm">手機</a> - Astro Slide 5G - <b>解決Your device will boot in 5 seconds問題</b></h3>
+<h3><a href="../phone.htm">手機</a> - Astro Slide 5G - <b>如何備份全部磁區的資料</b></h3>
 <hr size="1">
 <br>
 <p>
-參考資訊：<br>
-https://github.com/planet-community-org/planet-devices/wiki/Astro-rooting<br>
-https://www.ifixit.com/Guide/How+to+unlock+the+bootloader+of+an+Android+Phone/152629<br><br>
-
-問題如下：
-</p>
-<pre>
-Your device has been unlocked and cannot be trusted
-Your device will boot in 5 seconds
-</pre><br>
-
-<p>
-解法如下：<br>
 執行如下命令後，再將Astro Slide 5G連接到PC<br>
 </p>
 <pre>
 $ cd
 $ git clone https://github.com/bkerler/mtkclient
 $ cd mtkclient
-$ ./mtk r vbmeta_a vbmeta_a_astro-slide-5g.img
-$ ./mtk w vbmeta_a vbmeta.img.empty
+$ ./mtk rl backup
 </pre>
 <br>
 </div>
